--- a/env.sample
+++ b/env.sample
@@ -2,10 +2,15 @@ YOUR_NAME=John
 LANGUAGE=en
 INTERUPT_MANUALLY=True
 OPENAI_API_KEY=
+# Assistant model (optional)
+OPENAI_MODEL_FOR_ASSISTANT=gpt-5.2
 # Comment out if you don't want suggestions from AI. Set the right vector store ID with the right knowledge (should start wtith vs_*)
 OPENAI_VECTOR_STORE_ID_FOR_ANSWERS=
 # Comment out if you don't want to use OpenAI for transcription, but use local model instead
 OPENAI_MODEL_FOR_TRANSCRIPT=gpt-4o-mini-transcribe
 #OPENAI_MODEL_FOR_TRANSCRIPT=gpt-4o-transcribe
+# UI font sizing
+AGENT_FONT_SIZE=14
+DEFAULT_FONT_SIZE=10
 # Complex words where transcriber usually fails:
 KEYWORDS="CocaCola, Pepsi, McDonald's, KFC, Burger King"
