feat: implement structured logging across the application

--- a/env.sample
+++ b/env.sample
@@ -12,5 +12,9 @@ OPENAI_MODEL_FOR_TRANSCRIPT=gpt-4o-mini-transcribe
 # UI font sizing
 AGENT_FONT_SIZE=14
 DEFAULT_FONT_SIZE=10
+# Logging
+LOG_LEVEL=INFO
+LOG_FILE_MAX_MB=5
+LOG_FILE_BACKUP_COUNT=5
 # Complex words where transcriber usually fails:
 KEYWORDS="CocaCola, Pepsi, McDonald's, KFC, Burger King"
