feat: enhance assistant and transcription resilience with retry mechanisms and status callbacks

--- a/env.sample
+++ b/env.sample
@@ -16,5 +16,20 @@ DEFAULT_FONT_SIZE=10
 LOG_LEVEL=INFO
 LOG_FILE_MAX_MB=5
 LOG_FILE_BACKUP_COUNT=5
+# Audio segmentation tuning
+RECORD_SECONDS=300
+SILENCE_THRESHOLD=50
+SILENCE_DURATION=1.0
+FRAME_DURATION_MS=100
+# Assistant API resilience
+ASSISTANT_API_TIMEOUT_SECONDS=60
+ASSISTANT_API_MAX_RETRIES=3
+ASSISTANT_API_RETRY_BASE_SECONDS=1.0
+ASSISTANT_SUMMARY_TIMEOUT_SECONDS=120
+ASSISTANT_TITLE_TIMEOUT_SECONDS=30
+# Transcription API resilience
+TRANSCRIBE_API_TIMEOUT_SECONDS=60
+TRANSCRIBE_API_MAX_RETRIES=3
+TRANSCRIBE_API_RETRY_BASE_SECONDS=1.0
 # Complex words where transcriber usually fails:
 KEYWORDS="CocaCola, Pepsi, McDonald's, KFC, Burger King"
