feat: add transcript filtering functionality to control artifacts and hallucinations

--- a/env.sample
+++ b/env.sample
@@ -31,5 +31,12 @@ ASSISTANT_TITLE_TIMEOUT_SECONDS=30
 TRANSCRIBE_API_TIMEOUT_SECONDS=60
 TRANSCRIBE_API_MAX_RETRIES=3
 TRANSCRIBE_API_RETRY_BASE_SECONDS=1.0
+# Transcript filtering (artifact/hallucination control)
+TRANSCRIPT_FILTER_MIN_CHARS=2
+# Comma-separated optional overrides/extensions:
+# TRANSCRIPT_FILTER_EXACT="bye., um"
+# TRANSCRIPT_FILTER_PREFIXES="thanks for watching, thank you for joining"
+# TRANSCRIPT_FILTER_CONTAINS="please subscribe to my channel, amara.org"
+# TRANSCRIPT_FILTER_REGEX="\\bpromo\\b, ^[\\W_]+$"
 # Complex words where transcriber usually fails:
 KEYWORDS="CocaCola, Pepsi, McDonald's, KFC, Burger King"
