feat: add auto-start and auto-summarize settings with UI integration and update transcript storage format

--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,8 @@
 YOUR_NAME=John
 LANGUAGE=en
 INTERUPT_MANUALLY=True
+AUTO_START_TRANSCRIPTION=False
+AUTO_SUMMARIZE_ON_STOP=False
 OPENAI_API_KEY=
 # Assistant model (optional)
 OPENAI_MODEL_FOR_ASSISTANT=gpt-5.2
@@ -21,6 +23,8 @@ RECORD_SECONDS=300
 SILENCE_THRESHOLD=50
 SILENCE_DURATION=1.0
 FRAME_DURATION_MS=100
+OUTPUT_DIR=output
+SUMMARIES_DIR=output_summaries
 # Assistant API resilience
 ASSISTANT_API_TIMEOUT_SECONDS=60
 ASSISTANT_API_MAX_RETRIES=3
