feat: add custom prompt web search functionality with environment configuration and UI integration

--- a/env.sample
+++ b/env.sample
@@ -3,6 +3,8 @@ LANGUAGE=en
 INTERUPT_MANUALLY=True
 AUTO_START_TRANSCRIPTION=False
 AUTO_SUMMARIZE_ON_STOP=False
+# Enable internet search for assistant answers to user-entered custom prompts
+ASSISTANT_ENABLE_WEB_SEARCH_FOR_CUSTOM_PROMPTS=True
 OPENAI_API_KEY=
 # Assistant model (optional)
 OPENAI_MODEL_FOR_ASSISTANT=gpt-5.2
