--- a/env.sample
+++ b/env.sample
@@ -26,6 +26,7 @@ SILENCE_THRESHOLD=50
 SILENCE_DURATION=1.0
 FRAME_DURATION_MS=100
 OUTPUT_DIR=output
+TEMP_DIR=tmp
 SUMMARIES_DIR=output_summaries
 # Assistant API resilience
 ASSISTANT_API_TIMEOUT_SECONDS=60
