feat: add background context functionality and context file support

--- a/env.sample
+++ b/env.sample
@@ -47,3 +47,5 @@ TRANSCRIPT_FILTER_MIN_CHARS=2
 # TRANSCRIPT_FILTER_REGEX="\\bpromo\\b, ^[\\W_]+$"
 # Complex words where transcriber usually fails:
 KEYWORDS="CocaCola, Pepsi, McDonald's, KFC, Burger King"
+# Path to a markdown/text file with background context included in every AI call
+CONTEXT_FILE=context.md
