feat: enhance assistant functionality with new prompt templates and live assistant panels

--- a/env.sample
+++ b/env.sample
@@ -7,9 +7,21 @@ AUTO_SUMMARIZE_ON_STOP=False
 ASSISTANT_ENABLE_WEB_SEARCH_FOR_CUSTOM_PROMPTS=True
 OPENAI_API_KEY=
 # Assistant model (optional)
-OPENAI_MODEL_FOR_ASSISTANT=gpt-5.2
+OPENAI_MODEL_FOR_ASSISTANT=gpt-5-mini
 # Comment out if you don't want suggestions from AI. Set the right vector store ID with the right knowledge (should start wtith vs_*)
 OPENAI_VECTOR_STORE_ID_FOR_ANSWERS=
+# Live assistant panels (triggered by output-device transcription only)
+ASSISTANT_LIVE_ANSWERS_ENABLED=False
+ASSISTANT_LIVE_SUGGESTIONS_ENABLED=False
+ASSISTANT_LIVE_EXPLANATION_ENABLED=False
+ASSISTANT_LIVE_FACTS_ENABLED=False
+# Assistant prompt templates (use \n for line breaks)
+ASSISTANT_PROMPT_BASE=You are helping user with name '{your_name}'.\nThe user is in a live meeting and shares raw transcript snippets. Treat earlier messages as context but focus your reply on the most recent entry. Keep responses in plain text (no Markdown) and limit yourself to at most three sentences. Do not include document references, filenames, or URLs. Avoid repeating previous guidance.
+ASSISTANT_PROMPT_ANSWER_QUESTION=Address the most recent message directly. When you need additional context, perform a file search before responding. If the message is not a question or you lack sufficient information, reply with '---'. Do not ask the user follow-up questions.
+ASSISTANT_PROMPT_SUGGEST_QUESTIONS=Produce one to three concise questions the user could ask next, each on its own line. Use available context and perform a file search first if it helps craft better prompts.
+ASSISTANT_PROMPT_EXPLAIN_IT=Explain key concepts, decisions, or reasoning referenced in the latest message so the user understands them quickly. Draw on file search when needed. Provide clear, practical insight within three sentences.
+ASSISTANT_PROMPT_GET_FACTS=Investigate the latest message by performing an up-to-date internet search along with any relevant file search. Return a brief factual summary that highlights the most relevant information you find.
+ASSISTANT_PROMPT_CUSTOM_PROMPT=The user has asked a specific question during the meeting. Address their question directly and comprehensively. Perform a file search or web search if additional information would help. Provide a clear, actionable answer.
 # Comment out if you don't want to use OpenAI for transcription, but use local model instead
 OPENAI_MODEL_FOR_TRANSCRIPT=gpt-4o-mini-transcribe
 #OPENAI_MODEL_FOR_TRANSCRIPT=gpt-4o-transcribe
